  make bootstrap on any platform should not change the images in boot/ and paves
  the way for automated testing that the bootstrap is repeatable.
  (David Allsopp, review by Damien Doligez and Sébastien Hinderer)

- #11160: otherlibs: merge win32unix into unix.
  (Sébastien Hinderer, review by David Allsopp, Nicolás Ojeda Bär,
  Xavier Leroy, Vincent Laviron and Antonin Décimo)

### Bug fixes:

- #11167: Fix memory leak from signal stack.
  (Antoni Żewierżejew, review by Gabriel Scherer and Enguerrand Decorne)

- #11112: harden -use-runtime against spaces or quotes in the provided path
  (Gabriel Scherer, report by Brahima Dibassi, review by David Allsopp)

- #11068, #11070: Fix typo in function name given in Unix_error exception for
  Unix.readlink on Windows.
  (David Allsopp, report by Xia Li-yao)

- #10807: Don't duplicate standard handles in the child process
  spawned by win32unix Unix.create_process if the handles were already
  inheritable. Fix broken signalling of EOF on standard handles if
  they were already inheritable.
  (Antonin Décimo, review by Xavier Leroy and Nicolás Ojeda Bär)

- #11077: Make dumpobj compatible with absence of naked pointer support
  (Olivier Nicole and Jan Midtgaard, review by Gabriel Scherer)

- #11111: fix fork() usage in ocamltest C code.
  When calling fork() from C code with the Multicore runtime active,
  one needs to call caml_atfork_hook() on the forked child before it
  can use the OCaml runtime.
  (Gabriel Scherer, review by Xavier Leroy, report by Brahima Dibassi)

- #10809: Use the WSA_FLAG_NO_HANDLE_INHERIT on Windows when creating
  sockets with WSASocket if the cloexec (non-inheritable) parameter is
  true. Fixes a race condition where a child process could inherit the
  socket and deadlock the parent.
  (Antonin Décimo, review by Xavier Leroy)

- #11204: Fix regression introduced in 4.14.0 that would trigger Warning 17 when
  calling virtual methods introduced by constraining the self type from within